[tool.poetry]
name = "probability"
version = "1.0.0"
description = ""
authors = ["Björn Petersen <git@bjoernpetersen.net>"]

[tool.poetry.dependencies]
python = "~3.11"
matplotlib = "^3.7.2"
sentry-sdk = "^1.9.9"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    # "error",
]

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
