[tool.poetry]
name = "probability"
version = "1.0.0"
description = ""
authors = ["Björn Petersen <git@bjoernpetersen.net>"]

[tool.poetry.dependencies]
python = "~3.12"
matplotlib = "^3.7.2"
sentry-sdk = "^1.9.9"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
mypy = "^1.0.0"
pytest = "^7.4.0"
ruff = "0.1.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # "error",
]

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.ruff]
extend-select = [
    "I001",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
